# minimal-cpp-database

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cli/: CLI.cpp
include/: pager.hpp
include/minidb_pp/: buffer.hpp  pager.hpp  types.hpp
include/plusmini_db/: constants.hpp
src/: buffer.cpp  pager.cpp  plusmini_db.cpp
